Get rule query working with curated IDs